fix button padding issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -92,12 +92,12 @@ header {
 
 .register {
     display: flex;
-    gap: 1.5rem;
+    gap: 0.8rem;
 }
 
 .sign-in,
 .sign-up {
-    padding: 0.6rem 1rem;
+    padding: 0.6rem 0.8rem;
     border-radius: 30px;
     font-size: 0.7rem;
 }
@@ -537,8 +537,9 @@ footer {
 }
 
 footer .get-app {
-    padding: 1rem 1.3rem;
+    padding: 1rem 0.4rem;
     border-radius: 26px;
+    font-size: 0.8rem;
 }
 
 footer p {
@@ -567,7 +568,23 @@ footer p {
         padding-left: 3rem;
         padding-right: 3rem;
     }
+
+    footer .get-app {
+        padding: 1rem 1.3rem;
+        font-size: 1rem;
+    }
+
+    .sign-in,
+    .sign-up {
+        padding: 0.8rem 1.3rem;
+        font-size: 0.8rem;
+    }
+
+    .register {
+        gap: 2rem;
+    }
 }
+
 
 @media screen and (min-width:972px) {
     nav.hide {
